# TaskGtaph

./: CMakeLists.txt  Graph.hpp  Graph.ipp  Node.hpp  Node.ipp  README.md  main.cpp
benchmark/: benchmark.cpp
unittests/: test_example.cpp
